--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -3,14 +3,15 @@
     background-color:#ffffff;
     color: white;
     height:70px;
-    border-style :solid;
+    border-style :solid, 5px;
+    border-color: #cccccc
     margin-top:0px;
 
 
     
 }
 
-h1{    background-color:#00b3b3;
+h1{    background-color:#4aaaa5;
       text-align :center;
        width: 180px;
        height:70px;
@@ -19,20 +20,23 @@ h1{    background-color:#00b3b3;
       margin-top:0px;
 }
 .aboutme{
+
 		padding-top:27px;
     padding-left:27px;
     padding-right:27px;
+
 		margin:20px;
 		margin-left: 70px;
         background-color:#ffffff;
         float:left;
         width: 400px;
        height:150px;
-       color:#00b3b3;
+       color:#4aaaa5;
        font-weight: bold;
        font-size: 100%;
        }
        .contactbody{
+         
     padding-top:27px;
        padding-left:27px;
     padding-right:27px;
@@ -42,8 +46,8 @@ h1{    background-color:#00b3b3;
         background-color:#ffffff;
         float:left;
         width: 400px;
-       height:400px;
-       color:#00b3b3;
+       height:300px;
+       color:#4aaaa5;
        font-weight: bold;
        font-size: 100%;
        }
@@ -57,14 +61,16 @@ h1{    background-color:#00b3b3;
        float:right;
        width: 250px;
        height:170px;
-       color:#00b3b3;
+       color:#4aaaa5;
        text-align:center;
        font-weight: bold;
        font-size: 100%;
 
 
        }
-.portfolio2{padding-top:27px;
+.portfolio2{
+ 
+  padding-top:27px;
      padding-left:27px;
     padding-right:27px;
     margin:20px;
@@ -73,7 +79,7 @@ h1{    background-color:#00b3b3;
         float:left;
         width: 600px;
        height:450px;
-       color:#00b3b3;
+       color:#4aaaa5;
        font-weight: bold;
        font-size: 100%;}
 ul{text-align:right;
@@ -102,16 +108,18 @@ a{
 font-weight: lighter;}
 .body{width: 100%;
        height:520px;
+       background-image:url(../images/background.jpg);
        background-color:#e6e6e6;
         border-style :solid;
         border-color:#a6a6a6;
     border-top-width:2px;
-    border-bottom-width:0px;
+    border-bottom-width:7px;
+    border-bottom-color: #4aaaa5;
     border-left-width: 0px;
      border-right-width: 0px;
 }
 .form1{color : #b3b3b3;
 font-weight: lighter;}
 .formtype,.formemail { width: 200px; }
-.formvalue{width : 200px; height :200px; }
-.formsubmit{color:#ffffff; background-color:#00b3b3;border: #00b3b3; height: 25px; width :60px; }
+
+.formsubmit{color:#ffffff; background-color:#4aaaa5;border: #4aaaa5; height: 25px; width :60px; }
