--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -11,6 +11,8 @@
     
 }
 
+
+
 h1{    background-color:#4aaaa5;
       text-align :center;
        width: 180px;
@@ -30,7 +32,7 @@ h1{    background-color:#4aaaa5;
         background-color:#ffffff;
         float:left;
         width: 400px;
-       height:150px;
+       height:300px;
        color:#4aaaa5;
        font-weight: bold;
        font-size: 100%;
@@ -78,7 +80,7 @@ h1{    background-color:#4aaaa5;
         background-color:#ffffff;
         float:left;
         width: 600px;
-       height:460px;
+       height:450px;
        color:#4aaaa5;
        font-weight: bold;
        font-size: 100%;}
@@ -90,8 +92,9 @@ ul{text-align:right;
 }
 ul li {
     display: inline-block;
-    padding-left: 10px;
-    padding-right: 70px; 
+   border-left: thin solid ;
+   border-left-color:#b3b3b3;
+    padding-right: 60px; 
     font-color : white;   
 }
 
@@ -107,7 +110,7 @@ a{
 .about-me-text{color : #b3b3b3;
 font-weight: lighter;}
 .body{width: 100%;
-       height:520px;
+       height:500px;
        background-image:url(../images/background.jpg);
        background-color:#e6e6e6;
         border-style :solid;
@@ -127,3 +130,10 @@ font-weight: lighter;}
 #linkedinimage{padding:10px}
 #githubimage{padding:10px}
 #stackimage{padding:10px}
+
+.about,.portfolio,.contact{color: #b3b3b3;font-size: 18px; }
+
+a.about:hover,a.portfolio:hover,a.contact:hover {color:#4aaaa5;}
+.aru{float:left;
+padding-right: 20px;
+padding-bottom: 20px;}
